Fix dev header width clipping

--- a/src/hypercomb-dev/src/app/app.scss
+++ b/src/hypercomb-dev/src/app/app.scss
@@ -126,7 +126,7 @@
 
 :host {
   display: block;
-  width: 50vw;
+  width: 100vw;
   height: 100vh;
   position: relative;
   overflow: hidden;
